--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,13 +22,14 @@ serde_json = "1"
 tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 tokio = { version = "1.38.0", features = ["sync"] }
-wavetable = { path = "../rust_dsp/wavetable" }
-interpolation = { path = "../rust_dsp/interpolation" }
-envelope = { path = "../rust_dsp/envelope" }
-waveshape = { path = "../rust_dsp/waveshape" }
-vector = { path = "../rust_dsp/vector" }
-trig = { path = "../rust_dsp/trig" }
-dsp = { path = "../rust_dsp/dsp" }
+rust_dsp = {path = "../rust_dsp/lib"}
+# wavetable = { path = "../rust_dsp/wavetable" }
+# interpolation = { path = "../rust_dsp/interpolation" }
+# envelope = { path = "../rust_dsp/envelope" }
+# waveshape = { path = "../rust_dsp/waveshape" }
+# vector = { path = "../rust_dsp/vector" }
+# trig = { path = "../rust_dsp/trig" }
+# dsp = { path = "../rust_dsp/dsp" }
 tauri-cli = "1.5.14"
 atomic_float = "1.0.0"
 
