--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1"
 tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 tokio = { version = "1.38.0", features = ["sync"] }
-rust_dsp = {path = "../rust_dsp/lib"}
+rust_dsp = {git = "https://github.com/vsandstrom/rust_dsp"}
 # wavetable = { path = "../rust_dsp/wavetable" }
 # interpolation = { path = "../rust_dsp/interpolation" }
 # envelope = { path = "../rust_dsp/envelope" }
